--- a/hugo/layouts/post/single.html
+++ b/hugo/layouts/post/single.html
@@ -3,7 +3,21 @@
 <article>
 <h1 class="title">{{ .Title}}</h1>
 {{ .Content }}
+
 </article>
+<p class="endpost-blurb">
+  If you liked reading this, you should <a
+  href="https://twitter.com/jlfwong">follow me on twitter</a>,
+  take a look at <a href="/">other blog posts by me</a>, or maybe even
+  <a href="https://www.figma.com/careers">come work with me at Figma</a>!
+</p>
+
+<div class="twitter-calls-to-action">
+  <a href="https://twitter.com/share" data-size="large" data-count="none" data-text="{{ .Title }}" class="twitter-share-button" data-lang="en" data-via="jlfwong">Tweet</a>
+  <a href="https://twitter.com/jlfwong" data-size="large" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @jlfwong</a>
+  <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+</div>
+
 <hr />
 {{ partial "author.html" . }}
 <div class="adjacent-posts">
